[gd_scene load_steps=4 format=2]

[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Scenes/FTQ_Scene02/FTQ_Scene02.gd" type="Script" id=1]
[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Subs/FTQ_CustomLineEdit/FTQ_CustomLineEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Subs/FTQ_CustomLabel/FTQ_CustomLabel.tscn" type="PackedScene" id=3]

[node name="FTQ_Scene02" type="Control"]
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 1 )

[node name="FTQ_CustomLabel_01" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -20.0
margin_right = 380.0
margin_bottom = 20.0
default_font_size = 40

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -63.0
margin_right = 380.0
margin_bottom = 43.0
custom_constants/separation = 20

[node name="FTQ_CustomLabel_02" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_right = 760.0
margin_bottom = 0.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 760.0
margin_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="FTQ_CustomLine" parent="VBoxContainer/MarginContainer" instance=ExtResource( 2 )]
margin_left = 230.0
margin_top = 10.0
margin_right = 530.0
margin_bottom = 36.0
size_flags_horizontal = 6

[node name="FTQ_CustomLabel_03" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 86.0
margin_right = 760.0
margin_bottom = 86.0
default_font_size = 18

[node name="FTQ_CustomLabel_04" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 106.0
margin_right = 760.0
margin_bottom = 106.0
default_font_size = 18

[node name="FTQ_CustomLabel_05" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 126.0
margin_right = 760.0
margin_bottom = 126.0
default_font_size = 10
